<resources>
    <string name="app_name">Chevie</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="my_team">My Team</string>
    <string name="sport">My Sport</string>
    <string name="my_news">My News</string>
    <string name="nfl">NFL</string>
    <string name="saved_my_team">Make my Team</string>
    <string name="delete_team">Delete Team</string>
    <string name="profile_image">Profile Image</string>
    <string name="name_icon">name icon</string>
    <string name="email_icon">email icon</string>
    <string name="my_team_img">my team image</string>
    <string name="my_news_icon">my news icon</string>
    <string name="schedule_icon">schedule icon</string>
    <string name="loc_icon">location icon</string>
    <string name="email">E-mail</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- All News String here -->
    <string name="news_content_string">
        Free-agent wide receiver Antonio Brown is working out with the New Orleans Saints this morning,
        per Adam Schefter. The Saints have been without a legitimate number-two receiver next to Michael
        Thomas all year- and Brown would be more than capable. As Schefter stated, the Saints are doing their
        \"due diligence\", so it will be interesting to see what comes of the workout. Thomas and Brown have both caught at
        least 125 passes twice in their careers. Having them on the same team would be a nightmare for opposing DBs and a dream come
        true for Drew  Brees.
    </string>
    <string name="news_error">No news Available</string>
    <string name="news_label">Headlines</string>


    <!--all Event String here-->
    <string name="offense">Offensive Scheme</string>
    <string name="defense">Defensive Scheme</string>
    <string name="bye_week">Bye Week</string>
    <string name="date_Label">Date:</string>
    <string name="forcast_label">Forecast:</string>
    <string name="high_label">High:</string>
    <string name="low_label">Low:</string>
    <string name="stadium_label">Stadium:</string>
    <string name="event_error_message">No event scheduled for Today</string>
    <string name="event_label">Schedules</string>
    <string name="event_time">Time:</string>
    <string name="def">Def</string>
    <string name="off">Off</string>
    <string name="week_sch">Week %1$d</string>

    <!--All TeamHome Strings here-->
    <string name="head_coach">Head Coach:</string>
    <string name="Scheme_label">Scheme</string>
    <string name="team_label">Teams</string>

    <!--All Home Score Strings Here-->

    <string name="score_label">Final Score</string>
    <string name="qtr_one_score">1st Quarter</string>
    <string name="qtr_two_score">2nd Quarter</string>
    <string name="qtr_three_score">3rd Quarter</string>
    <string name="qtr_four_score">4th Quarter</string>
    <string name="week_label">Week</string>
    <string name="most_rec_lab">Recent</string>
    <string name="score_home_label">Scores</string>

    <!--All strings for scores list-->
    <string name="label_1st">1st</string>
    <string name="label_2nd">2nd</string>
    <string name="label_3rd">3rd</string>
    <string name="label_4th">4th</string>
    <string name="label_final">Fin</string>
    <string name="date_match">Date:</string>
    <string name="week_match">Week:</string>

    <!-- All Teams detail Strings -->
    <string name="team_name_label">Name:</string>
    <string name="team_initial_label">Initial:</string>
    <string name="team_conference_label">Conference:</string>
    <string name="team_division_label">Division:</string>
    <string name="bye_week_label">Bye Week:</string>
    <string name="defense_label">Defense:</string>
    <string name="offense_label">Offensive:</string>
    <string name="head_coach_label">Head Coach</string>
    <string name="offensive_coord_label">Offensive Coordinator</string>
    <string name="defensive_coord_label">Defensive Coordinator</string>
    <string name="special_coach_label">Special Coach</string>
    <string name="stadium_name_label">Stadium Name:</string>
    <string name="stadium_capacity_label">Capacity:</string>
    <string name="stadium_surface_label">Surface:</string>
    <string name="position_label">Position:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved_news_icon">saved icon</string>
    <string name="team_img">team img</string>
    <string name="person_icon">person icon</string>
    <string name="vs_img">vs Img</string>
    <string name="password">Password</string>
    <string name="go_to_registration">Don\'t have an account? Register here!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="go_to_login">Login Here! If you already have an account!</string>
    <string name="name">Name</string>
    <string name="sign_in">Sign In</string>
    <string name="login_success">Login successful</string>
    <string name="login_error_message">Please Login</string>
    <string name="validate_email">Please enter a Valid Email</string>
    <string name="validate_password">Please Enter Password</string>
    <string name="info_required">Fields are Empty! Please Enter Info!</string>
    <string name="wrong_password">Enter Correct Email and password and Try again</string>
    <string name="error_please_try_again">Error Occurred, Please again</string>
    <string name="enter_name">Please enter Your Name</string>
    <string name="please_confirm_password">Please confirm your password</string>
    <string name="field_empty">Fields are Empty! Please Enter Info!</string>
    <string name="password_wrong">Passwords don\'t match</string>
    <string name="unsuccessful_registration">Unsuccessful Registration, Please try again</string>
    <string name="registration">User registration Complition</string>
    <string name="registration_success">User registration failed</string>
    <string name="sch">Schedules</string>
    <string name="hash_tag">#</string>
    <string name="already_saved">News is already saved</string>
    <string name="team_exist">You already have a team saved</string>
    <string name="added_team">Your Team has been added</string>
    <string name="appwidget_text">Chevie News</string>
    <string name="add_widget">Add widget</string>
    <string name="no_available_score">No Available Score</string>

</resources>
