<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile"/>

        <item android:id="@+id/news"
            android:icon="@drawable/ic_news"
            android:title="@string/news_label"/>

        <item android:id="@+id/schedule"
            android:icon="@drawable/ic_sch"
            android:title="@string/event_label"/>

        <item android:id="@+id/teams"
            android:icon="@drawable/ic_team"
            android:title="@string/team_label"/>

        <item android:id="@+id/scores"
            android:icon="@drawable/ic_score"
            android:title="@string/score_home_label"/>
    </group>

</menu>